Made some spiel about what the website is about and for, included graph on front page

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,9 +5,9 @@
 {% endblock %}
 
 {% block navbar %}
-<nav class="navbar navbar-default">
-    ... navigation bar here (see complete code on GitHub) ...
-</nav>
+{#<nav class="navbar navbar-default">#}
+{#    ... navigation bar here (see complete code on GitHub) ...#}
+{#</nav>#}
 {% endblock %}
 
 {% block content %}
