added youtube embed and some other stuff

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,6 +21,10 @@
     very small horizontal interval, which can itself be misleading.
     </p>
     <br>
+
+    <img src="/colorado-log-graph" alt="log_chart" height="420" width="420">
+
+    <br>
     <p>
     For viruses, there is additional confusion when it comes to exponential growth. The instinct that is drilled into
     most people from their high school science classes is to always graph over time. Thing about viruses: they aren't
@@ -35,13 +39,17 @@
 {#        <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>#}
     </blockquote>
 
+    <div style="text-align: center;">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/54XLXg4fYsc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
     <p>
     The key to understanding exponential growth of a pandemic is to consider not the amount of time gone by, but the
     number of people impacted. The only way to reliably judge the efficacy of emergency measures is to study not how many
     new cases there are each day, but by studying how many new cases there are per existing case.
     </p>
 
-    <img src="/colorado-log-graph" alt="log_chart" height="420" width="420">
+
+
 
 
     <h1>TODO: cite sources</h1>
