--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -48,9 +48,36 @@
     new cases there are each day, but by studying how many new cases there are per existing case.
     </p>
 
-
+    {% for id in ids %}
+        <h3>{{id}}</h3>
+        <div id="{{id}}"></div>
+    {% endfor %}
 
 
 
     <h1>TODO: cite sources</h1>
+{% endblock %}
+
+{% block scripts %}
+    {{ super() }}
+    <!-- D3.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
+    <!-- jQuery -->
+    {#    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>#}
+    <!-- Plotly.js -->
+    <script src="https://cdn.plot.ly/plotly-latest.min.js" charset="utf-8"></script>
+{#    <script src="https://d14fo0winaifog.cloudfront.net/plotly-basic.js"></script>#}
+
+    <script type="text/javascript">
+
+        var graphs = {{graphJSON | safe}};
+        var ids = {{ids | safe}};
+
+        for(var i in graphs) {
+            Plotly.plot(ids[i], // the ID of the div, created above
+                graphs[i].data,
+                graphs[i].layout || {});
+        }
+
+    </script>
 {% endblock %}
